--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -398,8 +398,9 @@ a:hover {
 }
 
 #hero h2 {
-  color: #eee;
+  color: rgba(238, 238, 238, 0.705);
   margin-top: 15px;
+  font-weight: 400;
   margin-bottom: 30px;
   font-size: 15px;
 }
@@ -410,7 +411,7 @@ a:hover {
   font-weight: 400;
   font-size: 13px;
   letter-spacing: 1px;
-  display: inline-block;
+  display:inline-block;
   padding: 8px 30px 9px 30px;
   border-radius: 50px;
   transition: 0.5s;
@@ -560,6 +561,48 @@ section {
   background: #e43c5c;
   color: #fff;
   text-decoration: none;
+}
+#demo-container{
+  padding: 20px;
+  border-radius: 10px;
+}
+#demo-des{
+  font-weight: 300;
+  text-align: center;
+}
+.about .Demo-video{
+  border-radius: 10px;
+  width: 600px;
+  display:block;
+ }
+
+@media (max-width:700px){
+  .about .Demo-video{
+    border-radius: 10px;
+    width: 450px;
+    display:block;
+   }  
+}
+@media (max-width:500px){
+  #demo-des{
+    font-size: 20px;
+  }
+  .about .Demo-video{
+    border-radius: 10px;
+    width: 450px;
+    display:block;
+   }  
+}
+@media (max-width:400px){
+  #demo-des{
+    text-align: center;
+    font-size: 20px;
+  }
+  .about .Demo-video{
+    border-radius: 10px;
+    width: 350px;
+    display:block;
+   }  
 }
 
 /*--------------------------------------------------------------
